k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app-core
---
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app-deps
